--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-image: url("../images/back.jpg")
+  background-image: url("images/back.jpg")
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
