--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <div class="background-image"></div>
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
