--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: $red;
 }
 
 .container {
