--- a/style.scss
+++ b/style.scss
@@ -19,11 +19,11 @@ html {
 }
 
 body {
-   background-image: url("../images/back.jpg");
+   background-image: url("../images/back2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   font: 18px/1.4 $helvetica;
-  color: $black;
+  color: $darGray;
 }
 
 .container {
