--- a/style.scss
+++ b/style.scss
@@ -19,9 +19,7 @@ html {
 }
 
 body {
-   background-image: url("../images/back2.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+ background: white
   font: 18px/1.4 $helvetica;
   color: $darGray;
 }
