--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 }
 
 body {
- background-image: url("../images/back2.jpg");
+ background-image: url("../images/back.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   font: 18px/1.4 $helvetica;
